# GNN_PCNA

./: .env.gateway  .gitattributes  .gitignore  .mcp.json  1w60.cif  AGENTS.md  AUDIT_REPORT.md  CLAUDE.md  Dockerfile.gateway  KNOWN_BUGS.md  LIMITATIONS.md  PHASE5_HANDOFF.md  PocketGNNXL_Final_Manuscript.docx  README.md  REPO_MAP.md  SETUP.md  STATUS.md  VERIFICATION_REPORT.md  environment.yml  generate_manuscript.py  install.bat  install.sh  latest  manuscript_grc_final.md  pyproject.toml  requirements-ui.txt  requirements.txt  start_gateway.sh
.claude/: mcp.json  settings.local.json
.memory/: INDEX.md  PROJECT_STATE.md
.obsidian/: app.json  graph.json  workspace.json
agents/: catalog_to_obsidian.py  docker_packager.py  gemma_verifier.py  ingest.py  intent_parser.py  local_agent.py  mcp_server.py  obsidian_writer.py  orchestrator.py  pcna_crawler.py  telegram_gateway.py  wormhole_client.py
analysis_pilot/: pilot_md_analysis.py
checkpoints/: best.ckpt  train_log.txt  train_log_v2.txt
configs/: telegram_gateway.yaml
context/: round_00_seed.json  round_01_20260525_222620.json  round_01_20260525_235549.json  round_01_20260526_011839.json  round_01_20260526_024024.json  round_01_20260526_040331.json  round_01_20260526_052652.json  round_01_20260526_064842.json  round_01_20260526_081103.json  round_01_20260526_093426.json  round_01_urls.txt  round_02_20260525_225159.json  round_02_20260526_001713.json  round_02_20260526_013902.json  round_02_20260526_030209.json  round_02_20260526_042456.json  round_02_20260526_054719.json  round_02_20260526_070951.json  (+21 more)
(+3219 files in other folders)
